# CLaiM

./: .gitattributes  .gitignore  CLAUDE.md  Llama-Integration.md  QUICKSTART.md  README.md  analysis_gaps.md  boundary_detection_architecture_comparison.md  boundary_detection_redesign_recommendation.md  claim-project-structure.md  claim-specification.md  llm_boundary_implementation_roadmap.md  ocr_improvement_results.md  pyproject.toml  test_results_final_summary.md  test_results_summary.md  two_stage_optimization_summary.md
backend/: .env.example  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt
backend/api/: __init__.py  config.py  main.py  privacy_manager.py
backend/modules/: __init__.py
backend/shared/: __init__.py  exceptions.py
frontend/: .npmrc  DEBUG_STEPS.md  DEPENDENCY_NOTES.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: analyze_boundary_issues.py  analyze_pdf_structure.py  check_two_stage_config.py  debug_boundaries.py  debug_boundary_detection.py  debug_boundary_text.py  debug_fts.py  debug_fts_detailed.py  debug_missing_pages.py  debug_ocr_images.py  debug_preprocessing_steps.py  demo_splitting.py  dependency_fix_summary.md  download_models.py  evaluate_boundary_detection.py  fix_fts_issue.py  monitor_llm_usage.py  setup_dev.sh  start_backend.sh  start_frontend.sh  storage_demo.py  test_ai_classifier.py  test_asyncio_fix.py  test_boundaries_only.py  test_boundary_comparison.py  test_boundary_debug.py  test_boundary_detection.py  test_boundary_detection_detailed.py  test_boundary_fix.py  test_boundary_fix_simple.py  test_boundary_fixes.py  test_boundary_improvements.py  test_boundary_only.py  test_boundary_scores.py  test_cache_integration.py  test_complete_fix.py  test_end_to_end_classification.py  test_eval_quick.py  test_fixed_boundary_detection.py  test_frontend_debug.html  (+42 more)
tests/integration/: __init__.py  test_document_processing_pipeline.py
tests/test_data/: boundary_annotations.json  generate_test_pdfs.py
(+63 files in other folders)
